enforce correct typing for franchiseAverage()

--- a/frontend/src/pages/index.astro
+++ b/frontend/src/pages/index.astro
@@ -1,5 +1,5 @@
 ---
-import IndexPage from '../components/IndexPage.svelte';
+import IndexPage from '../components/FranchisePage.svelte';
 import Layout from '../layouts/Layout.astro';
 ---
 
