add importing aliases in tsconfig

--- a/frontend/src/pages/index.astro
+++ b/frontend/src/pages/index.astro
@@ -1,10 +1,10 @@
 ---
-import IndexPage from '../components/FranchisePage.svelte';
+import FranchisePage from '../components/FranchisePage.svelte';
 import Layout from '../layouts/Layout.astro';
 ---
 
 <Layout title="Entertainment Logger - Franchises">
 	<main>
-		<IndexPage client:load />
+		<FranchisePage client:load />
 	</main>
 </Layout>
